--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "auth0": "^4.10.0",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
