--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "auth0": "^4.10.0",
     "hamburger-react": "^2.5.1",
     "next": "14.2.13",
+    "particles.js": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5"
