--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "auth0": "^4.10.0",
+    "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
+    "papaparse": "^5.4.1",
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
