--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-bootstrap": "^2.8.0",
+    "web-vitals": "^2.1.4",
+    "bootstrap": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
