--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    
+    "react-bootstrap": "^2.8.0",
+    "web-vitals": "^2.1.4",
+    "bootstrap": "^5.3.3"
     "react-select": "^5.8.2",
-    "web-vitals": "^2.1.4"
+
   },
   "scripts": {
     "start": "react-scripts start",
