--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/src/Usecase3/backend
+
+
 .env
+src/Usecase3/backend/backend.py
+src/Usecase3/requirements.txt
