--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
-    "@lottiefiles/dotlottie-react": "^0.9.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "auth0": "^4.10.0",
-    "axios": "^1.7.7",
+    "@lottiefiles/dotlottie-react": "^0.10.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "auth0": "^4.14.0",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "hamburger-react": "^2.5.1",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.461.0",
     "papaparse": "^5.4.1",
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.8.2",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^7.0.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.8.3",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31"
   }
 }
