--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "alasql": "^4.5.2",
     "auth0": "^4.14.0",
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
