--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ yarn-error.log*
 /src/components/Usecase3/backend/.venv
 /src/components/Usecase3/backend/__pycache__
 /src/components/Usecase3/backend/DataViz/__pycache__
+
+venv/
+__pycache__/
