--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,12 +1,58 @@
-fastapi
-pandas
-faker
-matplotlib
-seaborn
-numpy
-python-multipart
-IPython
-uvicorn
-requests
-pyjwt
-python-jose
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asttokens==3.0.0
+boto3==1.35.74
+botocore==1.35.74
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+contourpy==1.3.1
+cycler==0.12.1
+decorator==5.1.1
+ecdsa==0.19.0
+executing==2.1.0
+Faker==33.1.0
+fastapi==0.115.6
+fonttools==4.55.1
+h11==0.14.0
+idna==3.10
+ipython==8.30.0
+jedi==0.19.2
+jmespath==1.0.1
+kiwisolver==1.4.7
+matplotlib==3.9.3
+matplotlib-inline==0.1.7
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.0.0
+prompt_toolkit==3.0.48
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+Pygments==2.18.0
+PyJWT==2.10.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.19
+pytz==2024.2
+requests==2.32.3
+rsa==4.9
+s3transfer==0.10.4
+seaborn==0.13.2
+six==1.16.0
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.41.3
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.1
+wcwidth==0.2.13
